@@ -4078,10 +4078,10 @@ backtracking verbs. --/
 
 /\x{whatever}/
 
-"((?=(?(?=(?(?=(?(?=())))*)))))"
+"((?=(?(?=(?(?=(?(?=()))))))))"
     a
 
-"(?(?=)?==)(((((((((?=)))))))))"
+"(?(?=)==)(((((((((?=)))))))))"
     a
 
 /^(?:(a)|b)(?(1)A|B)/I
@@ -4101,5 +4101,16 @@ backtracking verbs. --/
     aa123\O6
 
 /(?<N111>(?J)(?<N111>1(111111)11|)1|1|)(?(<N111>)1)/
+
+/(?(?=0)?)+/
+
+/(?(?=0)(?=00)?00765)/
+     00765
+
+/(?(?=0)(?=00)?00765|(?!3).56)/
+     00765
+     456
+     ** Failers
+     356   
 
 /-- End of testinput2 --/
